changed jpg file to lowercase so it would show on github page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     
 }
 .right-panel{
-    background-image:url("../images/vold.JPG");
+    background-image:url("../images/vold.jpg");
     background-position: left;
     
 }
